security/RBAC.yaml
# Namespace for IIP Platform
apiVersion: v1
kind: Namespace
metadata:
  name: iip-platform
  labels:
    name: iip-platform
    security.istio.io/tlsMode: istio
